--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -37,6 +40,13 @@
   background-color: #646cff;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 2em;
   border-radius: 5px;
+}
+
+.count {
+  font-size: 2em;
+  line-height: 1.1;
+  color: #fff5f5
 }
